<resources>
    <string name="app_name">COPTAS</string>
    <string name="title_home">Halaman Utama</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_article">Artikel</string>
    <string name="title_history">Riwayat Scan\n</string>
    <string name="pengaturan">pengaturan</string>
    <string name="menampilkan_diagnosis">Menampilkan Diagnosis</string>
    <string name="cara_pengobatan">Cara Pengobatan</string>
    <string name="scan_gambar">Scan Gambar</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="search">Pencarian</string>
    <string name="hasil_analisis">Hasil Analisis:</string>
    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="artikel">Artikel</string>
    <string name="article_image">article image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed cras ornare arcu dui vivamus arcu. Morbi tristique senectus et netus. Et magnis dis parturient montes nascetur ridiculus mus. Rutrum quisque non tellus orci ac auctor. Volutpat ac tincidunt vitae semper quis lectus. Aliquam sem fringilla ut morbi. Bibendum at varius vel pharetra vel turpis. Arcu vitae elementum curabitur vitae nunc sed velit. Convallis aenean et tortor at risus viverra. Bibendum enim facilisis gravida neque convallis. Ut sem nulla pharetra diam sit amet nisl suscipit. Dolor sit amet consectetur adipiscing. Ipsum nunc aliquet bibendum enim facilisis gravida. Velit egestas dui id ornare.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="gejala">Gejala:</string>
    <string name="riwayat">Riwayat Scan\n</string>
    <string name="bagaimana_cara_mencegahnya">Bagaimana Cara Mencegahnya?</string>
    <string name="bagaimana_cara_mengobatinya">Bagaimana Cara Mengobatinya?</string>
    <string name="tanaman_yang_terinfeksi">Tanaman yang Terinfeksi</string>
    <string name="disebabkan_oleh">Disebabkan Oleh:</string>
    <string name="chemical">Chemical :</string>
    <string name="organic">Organic   :</string>
    <string name="cariartikel">Cari Artikel</string>
</resources>