<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.settings.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:titleMarginTop="20dp"
        app:titleTextColor="@color/green"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentang_aplikasi"
        android:textSize="32sp"
        android:fontFamily="@font/mirza_bold"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_1">
            </ImageView>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="@+id/iv_logo"
                app:layout_constraintStart_toStartOf="@+id/iv_logo"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
                android:gravity="center"
                android:fontFamily="@font/mirza_bold"
                android:textSize="36sp">
            </TextView>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:fontFamily="@font/mirza_reguler"
                android:textSize="20sp"
                android:text="@string/about">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</LinearLayout>
