<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.result.ResultActivity">

    <!-- Toolbar with back button and title -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        app:titleMarginTop="20dp"
        app:titleTextColor="@color/green"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <!-- ScrollView for content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:elevation="4dp"
            android:padding="16dp">

            <!-- ImageView for leaf image -->
            <ImageView
                android:id="@+id/ivLeaf"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintWidth_percent="1"
                app:layout_constraintDimensionRatio="1:1.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/analysis_result"
                tools:srcCompat="@tools:sample/avatars" />

            <!-- Analysis result text -->
            <TextView
                android:id="@+id/analysis_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/hasil_analisis"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLeaf" />

            <!-- Suggestion text -->
            <TextView
                android:id="@+id/suggestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/analysis_result"
                tools:text="Coptas Mendeteksi adanya penyakit Leaf Miner pada daun Kopi" />

            <!-- Accuracy percentage text -->
            <TextView
                android:id="@+id/label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suggestion"
                tools:text="Miner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- LinearLayout for buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/artikelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:drawableLeft="@drawable/ic_button_save"
            android:drawablePadding="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/artikel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:drawableLeft="@drawable/ic_button_save"
            android:drawablePadding="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>
